# hydra-mdp

./: .gitignore  INSTALL.md  NOTICE  QUICKSTART.md  README.md  requirements.txt
cloud/: 00_preflight.sh  01_download_data.sh  02_precompute_teacher_scores.sh  03_train.sh  RUNPOD_SETUP.md  env.sh  requirements-frozen.txt  setup_env.sh  teacher_scores_from_gtrs.py
cloud/patches/: nuplan-devkit-py38.patch
deploy/: CMakeLists.txt  README.md
deploy/example-data/: README.md  camera2lidar.tensor  camera_intrinsics.tensor  camera_rgb.tensor  gt_detections.txt  gt_trajectory.txt  img_aug_matrix.tensor  lidar2image.tensor  points.tensor  status.tensor  token.txt
deploy/parity-data/: gt_detections.txt
deploy/parity-data/cpp/: agent_class_logits.tensor  agent_states.tensor  bev_semantic_logits.tensor  cam_bev.tensor  det_heading.tensor  det_heatmap.tensor  det_offset.tensor  det_size.tensor  scores.tensor  trajectory.tensor
deploy/parity-data/ref/: agent_class_logits.tensor  agent_states.tensor  bev_semantic_logits.tensor  cam_bev.tensor  det_heading.tensor  det_heatmap.tensor  det_offset.tensor  det_size.tensor  scores.tensor  trajectory.tensor
deploy/src/gtrs/: camera_frontend.cu  camera_frontend.hpp  gtrs_heads.cpp  gtrs_heads.hpp  gtrs_main.cpp  gtrs_pipeline.cu  gtrs_pipeline.hpp  lidar_frontend.cu  lidar_frontend.hpp  trt_module.hpp
deploy/tool/: build_gtrs_engines.sh  run_gtrs.sh
docs/: DEPLOY.md  MODELS.md  REPRODUCIBILITY.md  TRAINING.md  metrics.md
jmlr/: DEPLOY.md  LIDAR_ONNX_CPP_GUIDE.md  MODELS.md  NOTICE  README.md  RELEASE_NOTES_v0.1.0-mloss.md  REPRODUCIBILITY.md  SUBMISSION_CHECKLIST.md  bevfusion_planner.bib  bevfusion_planner.tex  cover_letter.tex  pack_submission.sh
navsim/agents/: abstract_agent.py  modular_features.py  modular_planner.py
navsim/agents/gtrs_bevfusion/: __init__.py  bevfusion_agent.py  bevfusion_backbone.py  bevfusion_collate.py  bevfusion_features.py  bevfusion_loss.py  bevfusion_model.py  bevfusion_target.py  config.py
navsim/agents/transfuser/: transfuser_features.py
navsim/common/: enums.py
navsim/planning/script/: run_pdm_score.py
navsim/planning/script/config/common/agent/: gtrs_bevfusion_agent.yaml  modular_planner.yaml
navsim/planning/simulation/planner/pdm_planner/observation/: pdm_observation.py
navsim/planning/simulation/planner/pdm_planner/utils/: pdm_enums.py
scripts/export/: compare_cpp_parity.py  export_gtrs_bevfusion_onnx.py  viz_gtrs_cpp.py
scripts/training/: export_onnx.py  precompute_teacher_scores.py  train_gtrs_bevfusion.py  train_modular_planner.py  viz_gtrs_bevfusion_seg.py
scripts/validation/: parity_pytorch_vs_trt.py
